--- a/dscommerce-html-css-main/css/details.css
+++ b/dscommerce-html-css-main/css/details.css
@@ -32,6 +32,7 @@
     color: var(--dsc-color-font-primary);
     font-size: 12px;
     margin: 10px 0;
+    text-align: justify;
 }
 
 .dsc-category-container {
